--- a/templates/excursions/input_search_result.html
+++ b/templates/excursions/input_search_result.html
@@ -35,6 +35,10 @@
             <div class="price">
                 ${{excursion.Price}}
             </div>
+            <div class="button_card">
+                <a href="{% url 'excursion_detail' excursion.pk %}" class="button">Book Now</a>
+                <a href="{% url 'excursion_detail' excursion.pk %}" class="button">Learn More</a>
+            </div>
         </div>
 
         {% empty %}
