--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -29,6 +29,9 @@
               {% if item.values.child_qty %}
               <div class="pt-2">Child: {{item.values.child_qty}}</div>
               {% endif%}
+              {% if item.values.child_qty %}
+              <div class="pt-2">Infant: {{item.values.infant_qty}}</div>
+              {% endif%}
               <div clas="pt-2">
                 Date: {{item.values.excursion_date}}
               </div>
