--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -60,14 +60,20 @@
 
                         <!-- number of adults -->
                         <div class="form-group mt-3">
-                            <label for="id_adult_qty">Adult (11-85 years old)</label>
+                            <label for="id_adult_qty">Adult (12-85 years old)</label>
                             <input type="number" class="form-control" id="id_adult_qty" name="adult_qty" value="1"
                                 min="1" max="99" data-item_id="{{excursions.id}}" required>
                         </div>
                         <!-- number of childrens -->
                         <div class="form-group mt-3">
-                            <label for="id_child_qty"> Child (3 - 10 years old)</label>
+                            <label for="id_child_qty"> Child (5 - 11 years old)</label>
                             <input type="number" class="form-control" id="id_child_qty" name="child_qty" value="0"
+                                min="0" max="99">
+                        </div>
+                           <!-- number of childrens -->
+                           <div class="form-group mt-3">
+                            <label for="id_infant_qty"> Infant (0-4 years old)</label>
+                            <input type="number" class="form-control" id="id_infant_qty" name="infant_qty" value="0"
                                 min="0" max="99">
                         </div>
                         <!-- pick up info -->
