--- a/templates/cart/excursions_cart.html
+++ b/templates/cart/excursions_cart.html
@@ -1,5 +1,7 @@
 {% extends 'excursions/excursions_base.html' %}
 {% load static %}
+{% load i18n %}
+{% load account socialaccount %}
 
 {% block content %}
 <section>
@@ -96,7 +98,7 @@
                 <hr>
                 <!-- keep shopping and Secure Checkout -->
 
-                {% if request.user.is_authenticated %}
+                {% if request.user.is_authenticated%}
                 <a href="{% url 'checkout' %}" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3">
                     <span class="text-uppercase">Secure Checkout</span>
                     <span class="icon">
@@ -104,7 +106,8 @@
                     </span>
                 </a>
                 {% else %}
-                <a href="{% url 'checkout' %}" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3"
+
+                <a href="" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3"
                     data-bs-toggle="modal" data-bs-target="#excursion_cart_Modal">
                     <span class="text-uppercase">Secure Checkout</span>
                     <span class="icon">
@@ -112,6 +115,7 @@
                     </span>
                 </a>
                 {% endif %}
+
 
                 <!-- Keep shoping -->
                 <a href="{% url 'excursions' %}" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3">
@@ -149,17 +153,32 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Please Login to continue</h1>
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Choose an Option</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <a href="{% url 'account_login' %}"
+                        <a href="{% url 'checkout' %}"
                             class="link-side btn my_hover sear-btn btn-outline-secondary mt-3" target="_blank">
-                            <span class="text-uppercase">Login</span>
+                            <span class="text-uppercase">Continue as guest</span>
                             <span class="icon">
                                 <i class="fa-solid fa-user"></i>
                             </span>
                         </a>
+                        <h5 class="text-center">or</h5>
+                        <p>Check out more easily with google and access your tickets on any device with your account </p>
+
+                        {% get_providers as socialaccount_providers %}
+
+                        {% if socialaccount_providers %}
+                  
+                        <div class="socialaccount_ballot" >
+                          <ul class="socialaccount_providers">
+                          {% include "socialaccount/snippets/provider_list.html" with process="login" %} 
+                          </ul>
+                        </div>
+                        {% endif%}
+
+    
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
