fix layout and colors

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -140,7 +140,7 @@
 
                     <!-- cart -->
                     <li class="nav-item cart display_on_computer">
-                        <a style="color:white"
+                        <a style="color:black"
                             class="nav-link btn my_hover sear-btn btn-outline-secondary position-relative"
                             href="{% url 'excursion-cart' %}">
                             <i class="fa-solid fa-cart-shopping"></i>
@@ -171,7 +171,7 @@
         <div id="phone_search_container">
                     <!-- cart -->
                     <div class="nav-item cart display_on_phone">
-                        <a style="color:white" class="nav-link btn my_hover sear-btn btn-outline-secondary position-relative"
+                        <a class="nav-link btn  my_hover sear-btn btn-outline-secondary position-relative"
                             href="{% url 'excursion-cart' %}">
                             <i class="fa-solid fa-cart-shopping"></i>
                             {% if total %}
