--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,7 +1,6 @@
 /*-------------------------------------------------------------------- Variables */
 
 :root {
-    --white: #ffffff;
     --black: #212529;
     --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     --Yellow: #FBB900;
@@ -9,6 +8,7 @@
     --gun-metal: #212a30;
     --font: sans-serif, "Montserrat", Georgia;
     --culture: #f2f2f2;
+    --white:white;
 }
 
 /* -------------------------------------------------------------------- Resets */
@@ -74,7 +74,7 @@ width:30px;
   top: 25px;
   left:50%;
   font-weight: bolder;
-  color:white;
+  color:black;
   background-color: var(--Yellow);
   border-radius: 50%;
   padding: 5px;
@@ -112,13 +112,13 @@ font-size: 14px;
 
 /* -------------------------------------------------------------------- navbar */
 .sear-btn {
-    background-color: var(--Yellow_lighter);
-    color: var(--white);
+    background-color: var(--Yellow);
+    color: var(--black);
     border: transparent;
 }
 
 .navbar-brand img {
-    width: 200px;
+    width: 255px;
 }
 
 .links-container {
@@ -148,13 +148,13 @@ font-size: 14px;
     display: block;
     width: auto;
     margin: 50px auto;
-    color: var(--white);
+    color: var(--black);
     text-decoration: none;
 }
 
 .links_for_404:hover {
     background-color: var(--Yellow_lighter);
-    color: var(--white);
+    color: var(--black);
 }
 
 
@@ -171,7 +171,7 @@ font-size: 14px;
     width: 100%;
 }
 .subcontainer{
-    color:white;
+    color:black;
     width: 30%;
     padding: 20px;
     position: absolute;
@@ -219,7 +219,7 @@ bottom: 10%;
 
 .content {
     text-align: center;
-    background-color: white;
+    background-color: black;
     padding: 20px;
 }
 
@@ -271,7 +271,7 @@ bottom: 10%;
 
 .color-user {
     background-color: #7CD1C0;
-    color: var(--white);
+    color: var(--black);
 }
 
 /* Data tables */
@@ -280,14 +280,14 @@ bottom: 10%;
     padding-bottom: 12px;
     text-align: left;
     background-color: #7CD1C0;
-    color: var(--white);
+    color: var(--black);
     border: 1px solid var(--culture);
     padding: 8px;
 }
 
 .data_table {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    background-color: var(--white);
+    background-color: var(--black);
     margin: auto;
     width: 100%;
     margin-top: 20px;
@@ -340,7 +340,7 @@ bottom: 10%;
 .x-delete {
     color: red;
     position: absolute;
-    background-color: var(--white);
+    background-color: var(--black);
 }
 
 /* admin form */
@@ -374,7 +374,6 @@ bottom: 10%;
   }
 
 
-  
 
 .button_card {
     width: 300px;
@@ -387,7 +386,7 @@ bottom: 10%;
  .button {
     padding: 10px 20px;
     background-color: #fbb900;
-    color: #fff;
+    color: var(--black);
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -411,10 +410,10 @@ bottom: 10%;
     left: 2%;
     font-size: 60px;
     animation: typing 2s steps(18), blink .5s step-end 3 alternate;
-    white-space: nowrap;
+    black-space: nowrap;
     overflow: hidden;
     width: 32ch;
-    color: var(--white);
+    color: var(--black);
     position: absolute;
     z-index: 5;
 }
@@ -523,7 +522,7 @@ bottom: 10%;
 }
 
 .ACCOM_type {
-    color: white;
+    color: black;
     padding: 2px 30px;
     text-align: center;
     display: inline-block;
@@ -627,8 +626,7 @@ bottom: 10%;
 }
 
 .update-cart-btn {
-    color: var(--Yellow);
-    background-color: var(--white);
+    background-color: var(--Yellow);
     font-size: 10px;
 }
 
@@ -665,7 +663,7 @@ bottom: 10%;
 @keyframes typing {
     0% {
         width: 0;
-        color: var(--white);
+        color: var(--black);
     }
 }
 
@@ -690,7 +688,7 @@ bottom: 10%;
     padding: 10px 12px;
     border: 1px solid transparent;
     border-radius: 0px;
-    background-color: white;
+    background-color: black;
     box-shadow: 0 1px 3px 0 #e6ebf1;
     -webkit-transition: box-shadow 150ms ease;
     transition: box-shadow 150ms ease;
@@ -965,26 +963,26 @@ bottom: 10%;
 .user_button {
     width: 100%;
     background-color: var(--Yellow);
-    color: var(--white)
+    color: var(--black)
 }
 
 .user_button_sm {
     background-color: var(--Yellow);
-    color: var(--white)
+    color: var(--black)
 }
 
 
 
 .my_hover:hover {
-    color: var(--white);
+    color: var(--black);
     background-color: var(--Yellow_lighter);
-    border-color: var(--white);
+    border-color: var(--black);
 }
 
 .my_hover:focus {
-    color: var(--white);
+    color: var(--black);
     background-color: var(--Yellow_lighter);
-    border-color: var(--white);
+    border-color: var(--black);
 }
 
 .form-title {
@@ -993,8 +991,8 @@ bottom: 10%;
 
 ul.socialaccount_providers {
     list-style-type: none;
-    margin: auto;
-    padding-left: 0;
+    text-align: center;
+
 }
 
 .socialaccount_ballot a {
@@ -1007,8 +1005,8 @@ ul.socialaccount_providers {
 }
 
 .socialaccount_ballot img {
-    width: 100%;
-    height: 35px;
+    width:200px;
+    height: auto;
     object-fit: cover;
     box-shadow: var(--shadow);
     border-radius: 5px;
@@ -1021,10 +1019,10 @@ ul.socialaccount_providers {
     left: 0;
     width: 100%;
     height: 100px;
-    background-color: var(--gun-metal);
+    background-color: var(--Yellow);
     background-size: cover;
     box-shadow: var(--shadow);
-    color: var(--white);
+    color: var(--black);
     display: grid;
     grid-template-columns:  auto;
 }
@@ -1041,7 +1039,7 @@ ul.socialaccount_providers {
 }
 
 .social_links a {
-    color: white;
+    color: var(--black);
 }
 .referecia{
     display: grid;
@@ -1082,7 +1080,7 @@ justify-content: center;
     margin: 2px 0;
     box-sizing: border-box;
     color: var(--black);
-    background-color: var(--white);
+    background-color: var(--black);
     font-family: "open sans", sans-serif;
     font-size: 15px;
     height: 40px;
@@ -1096,7 +1094,7 @@ justify-content: center;
     margin: 2px 0;
     box-sizing: border-box;
     color: black;
-    background-color: var(--white);
+    background-color: var(--black);
     font-family: "open sans", sans-serif;
     font-size: 15px;
     resize: none;
@@ -1177,7 +1175,7 @@ textarea::placeholder {
 .btn_email_sent {
     background-color: var(--Yellow);
     border: none;
-    color: var(--white);
+    color: var(--black);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -1186,7 +1184,7 @@ textarea::placeholder {
 }
 
 .btn_email_sent:hover {
-    color: var(--white);
+    color: var(--black);
     background-color: var(--Yellow_lighter);
 }
 
