--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -48,8 +48,8 @@
                     ${{excursion.Price}}
                 </div>
                 <div class="button_card">
-                    <a href="{% url 'excursion_detail' excursion.pk %}" class="button">Book Now</a>
-                    <a href="{% url 'excursion_detail' excursion.pk %}" class="button">Learn More</a>
+                    <a href="{% url 'excursion_detail' excursion.pk %}" class="btn button my_hover sear-btn btn-outline-secondary">Book Now</a>
+                    <a href="{% url 'excursion_detail' excursion.pk %}" class="btn button my_hover sear-btn btn-outline-secondary">Learn More</a>
                 </div>
             </div>
             {% endfor %}
