Add seo for site

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1080,7 +1080,7 @@ justify-content: center;
     margin: 2px 0;
     box-sizing: border-box;
     color: var(--black);
-    background-color: var(--black);
+    background-color: var(--white);
     font-family: "open sans", sans-serif;
     font-size: 15px;
     height: 40px;
@@ -1094,7 +1094,7 @@ justify-content: center;
     margin: 2px 0;
     box-sizing: border-box;
     color: black;
-    background-color: var(--black);
+    background-color: var(--white);
     font-family: "open sans", sans-serif;
     font-size: 15px;
     resize: none;
