--- a/templates/cart/excursions_cart.html
+++ b/templates/cart/excursions_cart.html
@@ -1,4 +1,5 @@
 {% extends 'excursions/excursions_base.html' %}
+<title>{% block title %}punta cana excursions 2023{% endblock %}</title>
 {% load static %}
 {% load i18n %}
 {% load account socialaccount %}
