--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -1,4 +1,5 @@
 {% extends 'excursions/excursions_base.html' %}
+<title>{% block title %}excursions in bavaro punta cana {% endblock %}</title>
 {% load static %}
 
 {% block content %}
