--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -1,4 +1,5 @@
 {% extends 'excursions/excursions_base.html' %}
+<title>{% block title %}{{excursions.title}}{% endblock %}</title>
 {% load static %}
 <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDG9TokC3lqJJD7aPJhfAotYVBXq0508ng&libraries=places"></script>
