--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -1,4 +1,6 @@
 {% extends 'excursions/excursions_base.html' %}
+{% block title %}punta cana excursions {% endblock %}
+
 {% load static %}
 
 {% block content %}
