--- a/templates/excursions/input_search_result.html
+++ b/templates/excursions/input_search_result.html
@@ -1,4 +1,5 @@
 {% extends 'excursions/excursions_base.html' %}
+<title>{% block title %}things to do in punta cana{% endblock %}</title>
 {% load static %}
 
 {% block content %}
