--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -22,7 +22,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://myonlinerecipes.herokuapp.com/">
     <meta name="robots" content="index, follow">
-    <title>Punta cana Explore</title>
+    <!-- <title>Punta cana Explore</title> -->
+    <title>{% block title %}Punta cana Explore{% endblock %}</title>
     <!-- Bootstrap 5.0.2-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
