--- a/templates/excursions/filters.html
+++ b/templates/excursions/filters.html
@@ -1,4 +1,5 @@
 {% extends 'excursions/excursions_base.html' %}
+<title>{% block title %}punta cana excursions{% endblock %}</title>
 {% load static %}
 
 {% block content %}
