--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,4 +1,5 @@
 {% extends 'excursions/excursions_base.html' %}
+<title>{% block title %}unique things to do in punta cana{% endblock %}</title>
 {% load static %}
 
 {% block content %}
