Add more seo for google

--- a/templates/cart/excursions_cart.html
+++ b/templates/cart/excursions_cart.html
@@ -1,5 +1,6 @@
 {% extends 'excursions/excursions_base.html' %}
 <title>{% block title %}punta cana excursions 2023{% endblock %}</title>
+{% block description %}Explore the enchanting region of Punta Cana Bavaro through captivating excursions that reveal the area's natural beauty and cultural richness. In 2023, embark on a journey like no other as you discover the hidden gems of this Caribbean paradise. Dive into the azure waters on snorkeling adventures to witness vibrant marine life, or take a leisurely horseback ride along the pristine beaches, feeling the gentle breeze against your skin. Venture into the lush jungles on ATV tours, where the thrill of exploration is matched only by the breathtaking scenery. For a taste of Dominican culture, join guided tours to learn about the history and traditions of the area. With excursions in Punta Cana Bavaro, you'll create memories that reflect the essence of this captivating destination.{% endblock %}
 {% load static %}
 {% load i18n %}
 {% load account socialaccount %}
