--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -6,17 +6,8 @@
     <!-- Metas -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="
-    Embark on an unforgettable journey with Punta Cana Explore. Our high-quality excursions 
-    await you at 8 diverse destinations across the stunning Dominican Republic. As pioneers 
-    in the industry, we lead with excellence, offering unparalleled adventures that capture 
-    the essence of each unique location. Whether you seek tropical landscapes, cultural 
-    immersion, or thrilling escapades, Punta Cana Explore promises an experience beyond compare.
-    Explore our huge selection of excursions and places to stay in punta cana.
-    Visit Saona Island, an idyllic speck of sand and palm trees in the blue Caribbean, 
-    during a full-day tour from Punta Cana. Board a small speedboat for the thrilling ride out to the island, 
-    including a stop at a natural swimming pool where you can see starfish. low price. ">
-
+    <meta name="description" content="">
+    <meta name="description" content="{% block description %}Explore the best 2023 Punta Cana excursions for family adventures, including Saona Island tours and unique activities in Punta Cana Bavaro. Discover excursiones en Republica Dominicana, delve into the Caribbean's treasures, and find excursiones near you. Contact excursiones VIP Punta Cana for affordable, child-friendly options, and explore the diverse excursiones Punta Cana has to offer, all at great prices. Don't miss the top Punta Cana tours and tourist attractions with trusted tour companies.{% endblock %}">
     <meta name="keywords" content="punta cana, overseas adventure, the adventure travelers, 2023, backpacking tours,explore tours, vacations, biking tours,adventure travel, bavaro,excursions,Visit Saona Island, blue Caribbean, natural swimming pool, Day Trip, things to do in puntacana, puntacana Scape Park Punta Cana, Wild Buggy Eco Adventure, Full Safari Zipline, Buggies & Horse Riding, Hoyo Azul y Cap Cana,Excursión de un día isla Saona, Cana Off-Road Dune, Amazing Water Cave,tours, Horseback City Tour, Cacao Farm, Zipline / Dune Full-Day Catalina Island Snorkeling Tour Ecological Riding Paradise, Diving: Certification Required, Scuba Diving Adventure: Certified Experience, with Altos Chavon - All Inclusive, Santo Domingo Colonial Samaná Cayo Levantado and Cascada Limón, Playa Rincon Levantado, Los Haitises National Montana Redonda, River Lunch">
     <meta name="author" content="Gerson De La Cruz">
     <meta name="viewport" content="width=device-width, initial-scale=1">
