--- a/templates/excursions/filters.html
+++ b/templates/excursions/filters.html
@@ -1,5 +1,7 @@
 {% extends 'excursions/excursions_base.html' %}
 <title>{% block title %}punta cana excursions{% endblock %}</title>
+{% block description %}When it comes to experiencing the Dominican Republic's tropical paradise, look no further than the best Punta Cana excursions. In 2023, these excursions promise to be your gateway to unforgettable adventures. Whether you're a family seeking quality time together or a solo traveler in search of thrilling experiences, Punta Cana offers a wide array of options to suit your preferences. Dive into the crystal-clear waters of Saona Island, explore the enchanting Bavaro region, and immerse yourself in the rich culture of this Caribbean gem. Our carefully curated selection ensures that you'll discover the best Punta Cana excursions, each designed to create cherished memories that will last a lifetime. Join us on a journey of discovery and exploration as we uncover the hidden treasures of this tropical paradise.{% endblock %}
+
 {% load static %}
 
 {% block content %}
