--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -1,5 +1,6 @@
 {% extends 'excursions/excursions_base.html' %}
 <title>{% block title %}{{excursions.title}}{% endblock %}</title>
+{% block description %}{{ excursions.title }}{% endblock %}
 {% load static %}
 <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDG9TokC3lqJJD7aPJhfAotYVBXq0508ng&libraries=places"></script>
