--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -1,6 +1,6 @@
 {% extends 'excursions/excursions_base.html' %}
 {% block title %}punta cana excursions {% endblock %}
-
+{% block description %}Embark on an extraordinary journey with Punta Cana excursions. In 2023, Punta Cana offers a diverse range of experiences, from exploring pristine beaches to immersing yourself in vibrant marine life and discovering cultural gems. Whether you're seeking the best Punta Cana excursions for your family vacation, yearning for Saona Island tours, or simply eager to explore Bavaro's beauty, there's something for everyone. With options ranging from VIP experiences to budget-friendly choices, our Punta Cana excursions cater to every traveler's preferences. Come and discover the Dominican Republic's breathtaking landscapes and unforgettable adventures with us.{% endblock %}
 {% load static %}
 
 {% block content %}
