--- a/templates/excursions/input_search_result.html
+++ b/templates/excursions/input_search_result.html
@@ -1,5 +1,7 @@
 {% extends 'excursions/excursions_base.html' %}
 <title>{% block title %}things to do in punta cana{% endblock %}</title>
+{% block description %}Punta Cana excursions for families offer the perfect blend of adventure and relaxation, making it an ideal destination for your next getaway. In 2023, create lasting memories with your loved ones as you explore the pristine beaches, vibrant marine life, and cultural wonders that Punta Cana has to offer. From thrilling Saona Island tours to discovering the beauty of Bavaro, there's something for every member of the family to enjoy. These excursions are thoughtfully designed to cater to all ages, ensuring that parents, kids, and even the youngest adventurers have an unforgettable experience. Discover the joy of bonding with your family in the captivating setting of Punta Cana, where every moment becomes a cherished adventure together.{% endblock %}
+
 {% load static %}
 
 {% block content %}
