--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -219,7 +219,7 @@ bottom: 10%;
 
 .content {
     text-align: center;
-    background-color: black;
+    background-color: var(--white);
     padding: 20px;
 }
 
@@ -287,7 +287,7 @@ bottom: 10%;
 
 .data_table {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    background-color: var(--black);
+    background-color: var(--white);
     margin: auto;
     width: 100%;
     margin-top: 20px;
