reverse to pk for now

--- a/templates/excursions/input_search_result.html
+++ b/templates/excursions/input_search_result.html
@@ -19,7 +19,7 @@
         {% for excursion in excursions %}
         <div class="card-wrapper">
             <div class="image-container">
-                <a class="position-relative" href="{% url 'excursion_detail' excursion.slug %}"><img
+                <a class="position-relative" href="{% url 'excursion_detail' excursion.pk %}"><img
                         src="{{excursion.main_image.url}}" alt="{{excursion.image_name}}">
                 </a>
                 {% if excursion.duration_time%}
@@ -54,8 +54,8 @@
                 ${{excursion.Price}}
             </div>
             <div class="button_card">
-                <a href="{% url 'excursion_detail' excursion.slug %}" class="button">Book Now</a>
-                <a href="{% url 'excursion_detail' excursion.slug %}" class="button">Learn More</a>
+                <a href="{% url 'excursion_detail' excursion.pk %}" class="button">Book Now</a>
+                <a href="{% url 'excursion_detail' excursion.pk %}" class="button">Learn More</a>
             </div>
         </div>
 
