--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -107,6 +107,23 @@
         </div>
     </nav>
 
+    <!-- flash messages -->
+    <div class="message mt-3">
+        {% if messages %}
+        {% for message in messages %}
+        {% if message.tags == "success" %}
+        <div class="alert alert-success" role="alert">
+            {{ message|safe }}
+        </div>
+        {% else %}
+        <div class="alert alert-danger" role="alert">
+            {{message}}
+        </div>
+        {% endif%}
+        {% endfor %}
+        {% endif %}
+    </div>
+
     <main>
         {% block content %}
         <!-- Main Content -->
