Add group excursions

--- a/templates/cart/excursions_cart.html
+++ b/templates/cart/excursions_cart.html
@@ -60,7 +60,9 @@
                                 <!-- Adult quantity-->
                                 <td>
                                     <input type="number" class="form-control cart-input" name="cart-adult_qty"
-                                        value="{{item.values.adult_qty}}" min="1" max="99">
+                                        value="{{item.values.adult_qty}}" 
+                                        min="1"
+                                        max="99" readonly>
                                 </td>
                                 <!-- Child quantity-->
 
