--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -64,7 +64,12 @@
                         <div class="form-group mt-3">
                             <label for="id_adult_qty">Adult (12-85 years old)</label>
                             <input type="number" class="form-control" id="id_adult_qty" name="adult_qty" value="1"
-                                min="1" max="99" data-item_id="{{excursions.id}}" required>
+                            {% if excursions.group %} 
+                            min="4"
+                            {% else%}
+                            min="1"
+                            {%endif%}
+                            max="99" data-item_id="{{excursions.id}}" required>
                         </div>
                         <!-- number of childrens -->
                         <div class="form-group mt-3">
