--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -182,6 +182,18 @@
         </div>
 
     </form>
+    {% if request.user.is_superuser%}
+    <h2 class="text-center mt-5">For admin only</h2>
+    <form class="review-form" action="{% url 'generate_reviews'  excursions.pk %}" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="mt-3">
+            <input class="btn user_button_sm" type="textera" name="reviews_content" placeholder="add each reviews with a comma" required>
+            <input class="btn user_button_sm" type="submit" value="Generate">
+        </div>
+    </form>
+    {%endif%}
+
+
     {% else %}
     <p class="text-center">Create an account to add a review:</p>
     <div class="text-center">
